<resources>
    <string name="app_name">Fudicon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="review">Review</string>
    <string name="manure_image1">Image</string>
    <string name="add_addition">Addition</string>
    <string name="img2_image2">image2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="create_new_account">Create New Account</string>
    <string name="fudicon">Fudicon</string>
    <string name="full_name">Full Name</string>
    <string name="register1">Register</string>
    <string name="already_registered_login_here">Already Registered? Login Here</string>
    <string name="e_mail">E-mail</string>
    <string name="create_new_password">Create New Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="new_here_create_account">New Here? Create Account</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="poll">Poll</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="rewards">Rewards</string>
    <string name="communicate">Communicate</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="register">Register</string>
    <string name="drop_zone">Drop Zone</string>
    <string name="log_out">Log Out</string>
</resources>