<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_poll"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/poll" />
        <item
            android:id="@+id/nav_dropzone"
            android:icon="@drawable/ic_menu_dropzone"
            android:onClick="@string/title_activity_maps"
            android:title="@string/drop_zone" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/ic_menu_rewards"
            android:title="@string/rewards" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/profile">
            <menu>
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_menu_login"
                    android:onClick="@string/title_activity_login"
                    android:title="@string/login" />
                <item
                    android:id="@+id/nav_register"
                    android:icon="@drawable/ic_menu_register"
                    android:onClick="@string/register"
                    android:title="@string/register" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:onClick="@string/title_activity_login"
                    android:title="@string/log_out" />
            </menu>
        </item>
    </group>


    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_menu_aboutus"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_contactus"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_feedback"
                android:title="@string/feedback" />
        </menu>

    </item>
</menu>





