<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:fontFamily="sans-serif"
        android:text="@string/fudicon"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/create_new_account"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#090909"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="#FBFBFB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.154"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#090909"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/e_mail"
        android:inputType="textWebEmailAddress|textAutoComplete|textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#FBFBFB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName"
        app:layout_constraintVertical_bias="0.050000012"
        android:autofillHints="" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#090909"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/create_new_password"
        android:inputType="textVisiblePassword|textPassword|textAutoComplete|numberPassword|textWebPassword"
        android:textColor="@color/white"
        android:textColorHint="#FBFBFB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.050000012"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="378dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="#090909"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/phone_number"
        android:inputType="number|phone"
        android:textColor="@color/white"
        android:textColorHint="#FBFBFB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/register"
        app:iconPadding="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/createText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_registered_login_here"
        android:textColor="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.125"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>